--- a/package.json
+++ b/package.json
@@ -6,22 +6,29 @@
     "@solana/web3.js": "^1.98.4",
     "@types/inquirer": "^8.2.12",
     "anchor": "^1.4.1",
+    "body-parser": "^1.20.2",
     "bs58": "^6.0.0",
     "dotenv": "^17.2.1",
     "ec-pem": "^0.18.0",
     "ethers": "^6.15.0",
+    "express": "^4.18.2",
     "inquirer": "^8.2.7",
     "litesvm": "^0.2.0",
     "pem": "^1.14.8",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "scripts": {
-    "start": "node -r dotenv/config -r ts-node/register/transpile-only src/off_boarding.ts",
+    "terminal": "node -r dotenv/config -r ts-node/register/transpile-only src/off_boarding_terminal.ts",
+    "web": "node -r dotenv/config -r ts-node/register/transpile-only src/off_boarding_webServer.ts",
     "build": "tsc",
     "start:built": "node -r dotenv/config dist/src/off_boarding.js"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.2.0"
+    "@types/bn.js": "^5.2.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0"
   }
 }
